# Archives

./: .gitignore  README.md  backup-restore.js  simple-server.js
AWS-SAM/App1/: ChangeLog  response  sam_deploy.sh  samconfig.toml  template-old.yaml  template.yaml
AWS-SAM/HelloWorld/: Readme.md  template.yaml
AWS-SAM/HelloWorld/HelloWorld-Python/: README.md  samconfig.toml  template.yaml
Archives/: amazon_rds.ipynb  amazon_rds.py  rds_snaphot.sh
Docker-EKS/: .kubeconfig
Docker-EKS/simple-server/: Dockerfile  Readme.md  cluster.yaml  deployment.yaml  index.js  package-lock.json  service.yaml
Jupiter/: test.ipynb
Python-Fastapi/Dockerize/: Dockerfile  ReadMe.md
Python-Fastapi/Dockerize/app/: main.py
Python-Fastapi/Fastapi-Mongodb-1/: Readme.md  pyproject.toml
Python-Fastapi/Fastapi-Mongodb-1/app/server/: app.py  database.py
Python-Fastapi/Fastapi-Mongodb-1/app/server/models/: student.py
Python-Fastapi/Fastapi-Mongodb-1/app/server/routes/: student.py
Python-Fastapi/app1/: ReadMe.md  main.py
Python-Fastapi/app1/api/: api.py  readme.md
Python-Fastapi/app2/: ReadMe.md  run.sh  samconfig.toml  template.yaml
Python-Fastapi/app2/app/: main.py
Python-SES/: email_test.py
Python/AWS-connectivity/: connection.py  helper.py  rds.py
Python/DevOPS-L&D/: pyproject.toml
Python/DevOPS-L&D/src/: prep.py  requestss.py  s3.org.py  s3.py  smtpp.py
Python/Wrappers/: pyproject.toml
Python/Wrappers/tests/: snippets.py
Python/Wrappers/wrappers/: time_calc.py
Terraform/python_integration/: data-sources.tf
extra/network-and-security-conf/vpc/: main.tf  (+2 more)
(+15 files in other folders)
